--- a/index.html
+++ b/index.html
@@ -10,16 +10,30 @@
 
 <body>
 
+    <!-- ABOUT -->
     <p class="heading">ABOUT</p>
-    <p class="heading-sub">Frontend Engineer & UX/UI Designer</p>
-    <p class="heading-sub">Currently based in India. Doing what I absolutely love.</p>
+    <p class="heading-sub">Namaste, I am Miraz Mondal</p>
+    <p class="heading-sub">Frontend Engineer & UX/UI Designer from India</p>
 
+
+    <!-- SKILLS -->
+    <p class="heading">SKILLS</p>
+    <div class="skills">
+        <p>Frontend</p>
+        <p>Backend</p>
+        <p>Cloud</p>
+    </div>
+
+    <!-- EXPERIENCE -->
     <p class="heading">EXPERIENCE</p>
 
+    <!-- PROJECTS -->
     <p class="heading">PROJECTS</p>
 
+    <!-- CONTACT -->
     <p class="heading">CONTACT</p>
 
+    <!-- FREQUENTLY ASKED QUESTIONS -->
     <p class="heading">FREQUENTLY ASKED QUESTIONS</p>
 
 </body>
