--- a/index.html
+++ b/index.html
@@ -9,11 +9,15 @@
 </head>
 
 <body>
+    <div class="main">
 
     <!-- ABOUT -->
-    <p class="heading">ABOUT</p>
+    <p class="heading">ABOUT</p> 
     <p class="heading-sub">Namaste, I am Miraz Mondal</p>
     <p class="heading-sub">Frontend Engineer & UX/UI Designer from India</p>
+    <p class="heading-sub">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste eaque voluptatibus neque
+        delectus tempora. Porro incidunt nisi fugiat, animi, esse necessitatibus nobis voluptatem a, praesentium optio
+        deserunt recusandae dolores pariatur.</p>
 
 
     <!-- SKILLS -->
@@ -35,7 +39,8 @@
 
     <!-- FREQUENTLY ASKED QUESTIONS -->
     <p class="heading">FREQUENTLY ASKED QUESTIONS</p>
-
+</div>
 </body>
 
 </html>
+
