--- a/index.html
+++ b/index.html
@@ -11,36 +11,193 @@
 <body>
     <div class="main">
 
-    <!-- ABOUT -->
-    <p class="heading">ABOUT</p> 
-    <p class="heading-sub">Namaste, I am Miraz Mondal</p>
-    <p class="heading-sub">Frontend Engineer & UX/UI Designer from India</p>
-    <p class="heading-sub">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iste eaque voluptatibus neque
-        delectus tempora. Porro incidunt nisi fugiat, animi, esse necessitatibus nobis voluptatem a, praesentium optio
-        deserunt recusandae dolores pariatur.</p>
+        <div class="main">
+            <div class="navbar">
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#experience">Experience</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+                <button id="dark-mode-toggle">Light Mode</button> <!-- Dark mode toggle button -->
+            </div>
+
+            <!-- ABOUT -->
+            <div id="home">
+                <p class="heading">ABOUT</p>
+                <div class="hero-container">
+                    <div class="hero-content">
+                        <h1>Miraz Mondal</h1>
+                        <p>Frontend Engineer | Product & QA Specialist</p>
+                        <p>I'm passionate about building user-friendly and performant web applications. With expertise
+                            in
+                            frontend development and experience in product management and quality assurance, I strive to
+                            create
+                            delightful digital experiences.</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- EXPERIENCE -->
+
+            <div id="experience">
+                <p class="heading">EXPERIENCE</p>
+
+                <div class="experience-container">
+                    <div class="experience">
+                        <h2>Software Engineer</h2>
+                        <h3>ABC Company</h3>
+                        <p class="duration">January 2020 - Present</p>
+                        <ul>
+                            <li>Developed web applications using HTML, CSS, and JavaScript.</li>
+                            <li>Implemented new features and functionalities.</li>
+                            <li>Collaborated with cross-functional teams to deliver projects on time.</li>
+                        </ul>
+                    </div>
+
+                    <div class="experience">
+                        <h2>Junior Developer</h2>
+                        <h3>XYZ Corporation</h3>
+                        <p class="duration">June 2018 - December 2019</p>
+                        <ul>
+                            <li>Assisted in the development of backend systems using Node.js and Express.js.</li>
+                            <li>Tested and debugged code to ensure optimal performance.</li>
+                            <li>Participated in code reviews and contributed to the team's coding standards.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <!-- SKILLS -->
+
+            <div id="skills">
+
+                <p class="heading">SKILLS</p>
+                <div class="skills-container">
+                    <div class="category-container">
+                        <div class="category">
+                            <h2>Frontend</h2>
+                            <div class="skill">
+                                <div class="badge html">HTML</div>
+                            </div>
+                            <div class="skill">
+                                <div class="badge css">CSS</div>
+                            </div>
+                            <div class="skill">
+                                <div class="badge js">JavaScript</div>
+                            </div>
+                            <div class="skill">
+                                <div class="badge react">React</div>
+                            </div>
+                        </div>
+
+                        <div class="category">
+                            <h2>Backend</h2>
+                            <div class="skill">
+
+                                <div class="badge node">Node.js</div>
+                            </div>
+                            <div class="skill">
+                                <div class="badge express">Express.js</div>
+                            </div>
+                            <div class="skill">
+                                <div class="badge python">Python</div>
+                            </div>
+                            <div class="skill">
+                                <div class="badge sql">SQL</div>
+                            </div>
+                        </div>
+
+                        <div class="category">
+                            <h2>Cloud</h2>
+                            <div class="skill">
+                                <div class="badge aws">AWS</div>
+                            </div>
+                            <div class="skill">
+                                <div class="badge azure">Azure</div>
+                            </div>
+                            <div class="skill">
+                                <div class="badge gcp">Google Cloud</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+
+            <!-- PROJECTS -->
+            <div id="projects">
+
+                <p class="heading">PROJECTS</p>
+                <div class="card-container">
+                    <div class="card">
+                        <img src="https://via.placeholder.com/300x200" alt="Project Image">
+                        <div class="card-content">
+                            <h2 class="card-title">Project Title 1</h2>
+                            <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
+                                eiusmod
+                                tempor incididunt ut labore et dolore magna aliqua.</p>
+                            <a href="#" class="btn">View Project</a>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <img src="https://via.placeholder.com/300x200" alt="Project Image">
+                        <div class="card-content">
+                            <h2 class="card-title">Project Title 2</h2>
+                            <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
+                                eiusmod
+                                tempor incididunt ut labore et dolore magna aliqua.</p>
+                            <a href="#" class="btn">View Project</a>
+                        </div>
+                    </div>
+
+                    <div class="card">
+                        <img src="https://via.placeholder.com/300x200" alt="Project Image">
+                        <div class="card-content">
+                            <h2 class="card-title">Project Title 3</h2>
+                            <p class="card-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do
+                                eiusmod
+                                tempor incididunt ut labore et dolore magna aliqua.</p>
+                            <a href="#" class="btn">View Project</a>
+                        </div>
+                    </div>
+
+                </div>
 
 
-    <!-- SKILLS -->
-    <p class="heading">SKILLS</p>
-    <div class="skills">
-        <p>Frontend</p>
-        <p>Backend</p>
-        <p>Cloud</p>
-    </div>
+            </div>
+            <!-- CONTACT & SOCIALS -->
+            <div id="contact">
 
-    <!-- EXPERIENCE -->
-    <p class="heading">EXPERIENCE</p>
+                <p class="heading">CONTACT & SOCIALS</p>
 
-    <!-- PROJECTS -->
-    <p class="heading">PROJECTS</p>
+                <div class="contact-social-container">
+                    <div class="contact">
+                        <h2>Contacts</h2>
+                        <p>If you have any inquiries or just want to say hi, feel free to reach out!</p>
+                        <p><strong>Email:</strong> example@example.com</p>
+                        <p><strong>Phone:</strong> +1 123-456-7890</p>
+                    </div>
 
-    <!-- CONTACT -->
-    <p class="heading">CONTACT</p>
+                    <div class="socials">
+                        <h2>Socials</h2>
+                        <ul>
+                            <li><a href="https://www.linkedin.com/in/yourprofile" target="_blank">LinkedIn</a></li>
+                            <li><a href="https://github.com/yourusername" target="_blank">GitHub</a></li>
+                            <li><a href="https://twitter.com/yourusername" target="_blank">Twitter</a></li>
+                            <!-- Add more social media links as needed -->
+                        </ul>
+                    </div>
+                </div>
 
-    <!-- FREQUENTLY ASKED QUESTIONS -->
-    <p class="heading">FREQUENTLY ASKED QUESTIONS</p>
-</div>
+
+
+
+            </div>
+
+        </div>
+        <script src="./script.js"></script>
 </body>
 
 </html>
-
