--- a/index.html
+++ b/index.html
@@ -13,14 +13,18 @@
 
         <div class="main">
             <div class="navbar">
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#experience">Experience</a></li>
-                    <li><a href="#skills">Skills</a></li>
-                    <li><a href="#projects">Projects</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                </ul>
-                <button id="dark-mode-toggle">Light Mode</button> <!-- Dark mode toggle button -->
+                <div class="navbar-sub">
+                    <ul>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#experience">Experience</a></li>
+                        <li><a href="#skills">Skills</a></li>
+                        <li><a href="#projects">Projects</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="navbar-sub">
+                    <button id="dark-mode-toggle">Light</button>
+                </div>
             </div>
 
             <!-- ABOUT -->
